# macula

./: .dockerignore  .gitignore  ARCHITECTURE.md  ARCHITECTURE_IMPROVEMENTS.md  BACKLOG.md  BOOTSTRAP_SERVICE.md  BOTTLENECK_FILE_REFERENCE.txt  CHANGELOG.md  CHANGELOG_LEGACY.md  CLAUDE.md  CODEBASE_REVIEW_2025-01-16.md  CODE_OF_CONDUCT.md  CODE_QUALITY_ANALYSIS.md  CODE_QUALITY_ANALYSIS_PHASE2.md  CODE_QUALITY_INDEX.md  CODE_QUALITY_QUICK_REFERENCE.md  CODE_QUALITY_REPORT_v0.13.0.md  CODE_QUALITY_REVIEW_macula_gateway.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  DHT_SERVICE_ADVERTISEMENT_STATUS.md  Dockerfile  Dockerfile.gateway  FINISHING_TOUCHES.md  GATEWAY_REFACTORING_V0.7.9.md  GETTING_STARTED.md  HELLO_WORLD.md  LICENSE  MDNS_SETUP.md  MIGRATION_0.3_TO_0.4.md  MULTI_ENDPOINT_RPC_IMPLEMENTATION.md  MULTI_HOP_RPC_STATUS.md  MULTI_NODE_TESTING_PLAN.md  PHASE2_PROGRESS.md  PHASE2_QUIC_SERVER_IMPLEMENTATION_PLAN.md  PUBSUB_HANDLER_REFACTORING_PLAN.md  README.md  REFACTORING_READY.md  REFACTORING_SDK_TO_CLIENT.md  REFACTORING_SESSION_SUMMARY.md  (+14 more)
architecture/: ARCHITECTURAL_REVIEW_2025.md  ARCHITECTURE_EVOLUTION.md  DOCUMENTATION_AUDIT_2025_11_17.md  DOCUMENTATION_INVENTORY.md  FULL_SUPERVISION_TREE.md  GATEWAY_RESPONSIBILITIES.md  INDEX.md  MACULA_PROJECT_STRUCTURE.md  MESH_HOT_UPGRADE.md  MIGRATION_V0.8.4_TO_V0.8.5.md  MODULE_DEPENDENCIES.md  MULTI_TENANCY.md  NATS_STYLE_ASYNC_RPC.md  NAT_RELAY_ARCHITECTURE_ANALYSIS.md  NAT_TRAVERSAL_ROADMAP.md  NAT_TRAVERSAL_SUMMARY.md  PING_PONG_AND_SCALING_ANALYSIS.md  PLATFORM_VISION.md  PROTOCOL_DESIGN_PRACTICES.md  ROADMAP.md  SESSION_SUMMARY_2025-01-16.md  SUBSYSTEM_REFACTORING_ANALYSIS.md  TLS_AUTO_GENERATION.md  V0.12.0_NAT_COMPLETE_PLAN.md  V0.8.0_COMPLETION_STATUS.md  V0.8.0_DHT_IMPLEMENTATION_BLOCKERS.md  V0.8.0_DOCKER_SUCCESS.md  V0.8.0_FINAL_STATUS.md  V0.8.0_FINAL_SUMMARY.md  V0.8.0_SUPERVISION_DIAGRAMS.md  V0.8.0_WORK_BREAKDOWN.md  V0.8.5_RELEASE_PLAN.md  WORKLOAD_PLATFORM_API.md  dht_cache_performance_guide.md  dht_routed_pubsub.md  dht_routed_rpc.md  dht_rpc_implementation_status.md  gateway_behavior_catalog.md  gateway_integration_plan.md  gateway_refactoring_plan.md  (+32 more)
artwork/: architecture-overview.mmd
bench/: macula_net_bench.erl
config/: bootstrap.config  edge.config  gateway.config  hybrid.config  sys.config  vm.args
demo/: macula_aggregator_node.erl  macula_distributed_demo.erl  macula_mesh_demo.erl  macula_sensor_node.erl
doc/: .build  404.html  api-reference.html  architecture.html  changelog.html  comparison.html  comparisons.html  development.html  dht_guide.html  documentation_status.html  edoc-info  executive_summary.html  full_supervision_tree.html  getting_started.html  glossary.html  hello_world.html  index.html  kademlia_dht_architecture.html  license.html  macula.epub  macula.html  macula_advertisement_manager.html  macula_app.html  macula_bootstrap_health.html  macula_bootstrap_registry.html  macula_bootstrap_server.html  macula_bootstrap_system.html  macula_cache.html  macula_chatter.html  macula_client.html  macula_client_behaviour.html  macula_cluster_strategy.html  macula_connection.html  macula_connection_manager.html  macula_connection_pool.html  macula_connection_sup.html  macula_connection_upgrade.html  macula_console.html  macula_core_types.html  macula_crdt.html  (+134 more)
docker/: Dockerfile.base  Dockerfile.bootstrap  Dockerfile.edge  Dockerfile.gateway  docker-compose.cross-gateway-pubsub.yml  docker-compose.integration-test.yml  docker-compose.multi-hop-mesh-test.yml  docker-compose.multi-mode.yml  docker-compose.multi-node-test.yml  docker-compose.pubsub-test.yml  docker-compose.pubsub-wildcard-test.yml  entrypoint.sh  generate-test-certs.sh  test-multi-mode.sh  (+8 more)
native/macula_crypto_nif/: Cargo.toml
native/macula_crypto_nif/src/: lib.rs
native/macula_did_nif/: Cargo.toml
native/macula_did_nif/src/: lib.rs
native/macula_mri_nif/: Cargo.toml
native/macula_mri_nif/src/: lib.rs
native/macula_quic/: Cargo.toml
native/macula_quic/src/: atoms.rs  cert.rs  config.rs  connection.rs  endpoint.rs  lib.rs  message.rs  runtime.rs  stream.rs
native/macula_ucan_nif/: Cargo.toml
native/macula_ucan_nif/src/: lib.rs
(+1197 files in other folders)
