[package]
name = "macula_mri_nif"
version = "0.1.0"
authors = ["rgfaber"]
edition = "2021"
description = "NIF for Macula MRI (Resource Identifier) operations - parsing, validation, and trie-based hierarchy queries"

[lib]
name = "macula_mri_nif"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.34"
radix_trie = "0.2"
lazy_static = "1.4"

[profile.release]
lto = true
opt-level = 3
